# automation

./: README.md  pyproject.toml
automation/: automation.py  faker.py
automation/assest/: Email.txt  phone.txt  potential-contacts.txt
tests/: test_automation.py
