[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["RoaaMustafa <labushanab14@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^8.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
